--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.9.1
 Django==5.2.4
 graphene==3.4.3
 graphene-django==3.2.3
+graphene-file-upload==1.3.0
 graphql-core==3.2.6
 graphql-relay==3.2.0
 promise==2.3
@@ -24,4 +25,7 @@ setuptools==80.9.0
 dj-database-url==2.1.0
 gunicorn==21.2.0
 whitenoise==6.6.0
-Pillow==10.4.0
+Pillow==10.0.0
+phonenumbers==9.0.10
+python-magic==0.4.27
+celery==5.5.3
